deploy/base/bff.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff
  annotations: { argocd.argoproj.io/sync-wave: "2" }
spec:
  replicas: 2
  selector: { matchLabels: { app: bff } }
  template:
    metadata: { labels: { app: bff } }
    spec:
      containers:
        - name: bff
          image: ghcr.io/vishnumuthyalu/waypoint-bff
          ports: [{ containerPort: 3000 }]
          readinessProbe: { httpGet: { path: /readyz, port: 3000 }, periodSeconds: 5 }
          livenessProbe: { httpGet: { path: /healthz, port: 3000 }, periodSeconds: 10 }
          resources:
            requests: { cpu: 50m, memory: 64Mi }
            limits: { memory: 192Mi }
---
apiVersion: v1
kind: Service
metadata:
  name: bff
spec:
  selector: { app: bff }
  ports: [{ port: 3000 }]
